CSS - Broken CSS fixed*

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -264,6 +264,10 @@ textarea {
   font-size: 0.8em;
 }
 
+.footer_hour {
+  font-size: 0.8em;
+}
+
 .footer_tel {
   font-size: 0.8em;
 }
