--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -258,6 +258,10 @@ label {
     font-size: .8em;
  }
 
+ .footer_hour {
+    font-size: .8em;
+ }
+
  .footer_tel {
     font-size: .8em;
  }
